[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "onnx-doctor"
version = "0.1.0"
dependencies = [
    "onnx>=1.19",
    "onnx-ir>=0.1.16",
    "pyyaml",
    "rich",
]
description = "Extensible and beautiful ONNX checker"
keywords = []
authors = [
  { name = "Justin Chu", email = "justinchuby@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Documentation = "https://github.com/justinchuby/onnx-doctor#readme"
Issues = "https://github.com/justinchuby/onnx-doctor/issues"
Source = "https://github.com/justinchuby/onnx-doctor"

[project.scripts]
onnx-doctor = "onnx_doctor._cli:main"

[tool.setuptools.package-data]
onnx_doctor = ["*.json", "*.yaml"]

[tool.pydocstyle]
convention = "google"

[tool.ruff]
target-version = "py39"
lint.select = [
    "A",
    "ARG",
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "D", # pydocstyle
    "E", # pycodestyle
    "F", # Pyflakes
    "G", # flake8-logging-format
    "I", # isort
    "ICN",
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-logging-format
    "N", # pep8-naming
    "NPY", # modern numpy
    "PERF", # Perflint
    "PIE", # flake8-pie
    "PLC",
    "PLE",
    "PLW",
    "RUF", # Ruff-specific rules
    "SIM",
    "SLOT",
    "T10", # flake8-debugger
    "TID252", # Disallow relative imports
    "TRY",
    "UP", # pyupgrade
    "W", # pycodestyle
    "YTT", # flake8-2020
]
lint.ignore = [
    "D1", # D1 is for missing docstrings, which is not yet enforced.
    "E501", # Line length. Not enforced because black will handle formatting
    "PYI041", # int | float is more clear
    "SIM102", # Collapible if statements are not always more readable
    "SIM108", # We don't always encourage ternary operators
    "SIM114", # Don't always combine if branches for debugability
    "SIM116", # Don't use dict lookup to replace if-else
    "TRY003", # Messages can be constructed in the exception
    "UP006", # keep-runtime-typing
    "UP007", # keep-runtime-typing
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
